# opentelemetry-python

opentelemetry-sdk/src/opentelemetry/sdk/trace/: __init__.py
rust/opentelemetry-python/: Cargo.toml  pyproject.toml
rust/opentelemetry-python/opentelemetry-python-sdk/: Cargo.toml
rust/opentelemetry-python/opentelemetry-python-sdk/src/: attributes.rs  lib.rs  value.rs
rust/opentelemetry-python/opentelemetry-python-sdk/src/trace/: event.rs  mod.rs  span.rs  tracer.rs
